--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,7 +5,7 @@
     padding: 0;
     width: 100%;
 }
-.logo {
+.navbar .logo {
     color: #ECF0F1;
     font-size: 1.5rem;
     padding: 0 2rem 0 1rem;
@@ -13,7 +13,7 @@
 
 .nav-labels {
     display: flex;
-    gap: 20px;
+    gap: 16px;
 }
 
 .nav-label {
@@ -21,3 +21,40 @@
     font-size: 1rem;
     cursor: pointer;
 }
+
+.navbar .username{
+
+    margin: 0 16px 0 auto;
+    padding: 0;
+    gap: 8px;
+    display: inline-flex;
+    align-items: center;
+    /* position: relative;
+    border: 1px solid transparent; */
+
+    color: #ECF0F1;
+    cursor: pointer;
+}
+.navbar .username p {
+    margin: 0;
+    padding: 0;
+    line-height: 2;
+  }
+
+/* .navbar .username::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    height: 2px;
+    width: 0;
+    background-color: #ECF0F1;
+    transition: all 0.2s ease;
+    transform: translateX(-50%);
+}
+  
+.navbar .username:hover::after {
+    width: 100%;
+    left: 0;
+    transform: none;
+} */
