--- a/src/components/text_field/text_field.css
+++ b/src/components/text_field/text_field.css
@@ -2,8 +2,8 @@
     border: 1px solid rgb(230, 230, 230);
     border-radius: 4px;
     padding: 8px;
-    min-height: 360px;
-    min-width: 720px;
+    width: 720px;
+    height: 360px;
     font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
     background-color: #fafafa;
