--- a/src/pages/written_diaries/written_diaries.css
+++ b/src/pages/written_diaries/written_diaries.css
@@ -20,8 +20,8 @@
     border: 2px solid wheat;
     border-radius: 2rem;
     box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.5);
-    min-height: 765px;
-    min-width: 585px;
+    height: 765px;
+    width: 585px;
 
     margin: 2rem 2rem 0 0;
 }
@@ -35,4 +35,14 @@
     font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
     color: aliceblue;
+}
+
+.written-diaries-main-container .actions-container{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    gap: 32px;
 }
