--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -6,8 +6,22 @@
 
 .homepage-main-container{
     display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 128px;
+}
+
+.homepage-center{
+    display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: end;
+    margin-left: 312px;
+}
+
+.homepage-right{
+    display: flex;
     justify-content: center;
 }
 
