--- a/src/components/text_field/text_field.css
+++ b/src/components/text_field/text_field.css
@@ -1,9 +1,11 @@
 .editor-container {
     border: 1px solid rgb(230, 230, 230);
     border-radius: 4px;
+    margin: 8px 0 0 0;
     padding: 8px;
+
     width: 720px;
-    height: 360px;
+    height: 540px;
     font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
     background-color: #fafafa;
