--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -8,31 +8,28 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    gap: 128px;
+    justify-content: space-between;
+    padding: 0 160px;
 }
 
-.homepage-center{
+.homepage-left{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
-    margin-left: 312px;
+    justify-content: center;
 }
 
 .homepage-right{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: end;
+    justify-content: end;
 }
 
 .digital-clock{
 
-    margin-top: 4rem;
+    margin-top: 32px;
     font-family: 'Courier New', Courier, monospace;
     font-size: 60px;
     font-weight: 100;
-}
-
-.homepage-text-field{
-    margin: 4rem 0 0 0;
 }
