--- a/src/components/text_field/text_field.css
+++ b/src/components/text_field/text_field.css
@@ -4,12 +4,15 @@
     margin: 8px 0 0 0;
     padding: 8px;
 
-    width: 720px;
-    height: 540px;
+    width: 1440px;
+    height: 480px;
     font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
     background-color: #fafafa;
     box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.2);
+
+    position: relative; /* Needed for absolute positioning of children */
+    overflow: visible; /* Allow content to overflow */
 }
 .editor-container:focus {
     outline: none;
