--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -8,7 +8,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 16px;
     padding: 0 160px;
 }
 
@@ -22,8 +23,9 @@
 .homepage-right{
     display: flex;
     flex-direction: column;
-    align-items: end;
-    justify-content: end;
+    align-items: center;
+    justify-content: center;
+    flex-grow: calc(1);
 }
 
 .digital-clock{
