--- a/src/pages/login_page/login_page.css
+++ b/src/pages/login_page/login_page.css
@@ -114,7 +114,7 @@
     border: 0;
 }
 
-.ant-btn{
+.login-main .ant-btn{
     width: 80px;
     height: 36px;
 
@@ -126,7 +126,7 @@
     box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
 }
 
-.ant-btn:hover{
+.login-main.ant-btn:hover{
     background-color: black !important;
     color: white !important;
     border-bottom: 1px solid black !important;
