--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -1,6 +1,6 @@
 .homepage-main-page{
 
-    background-color: antiquewhite;
+    background-image: linear-gradient(rgb(214, 214, 214),rgb(19, 19, 19),rgb(214, 214, 214));
     min-height: 100vh;
 }
 
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: center;
     gap: 16px;
-    padding: 0 160px;
+    padding: 0 100px;
 }
 
 .homepage-left{
@@ -18,6 +18,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-left: 120px;
 }
 
 .homepage-right{
@@ -25,6 +26,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-left: 48px;
     flex-grow: calc(1);
 }
 
