--- a/src/pages/written_diaries/written_diaries.css
+++ b/src/pages/written_diaries/written_diaries.css
@@ -1,6 +1,6 @@
 .written-diaries-main-page{
 
-    background-color: antiquewhite;
+    background-image: linear-gradient(rgb(201, 201, 201),rgb(17, 17, 17),rgb(201, 201, 201));
     min-height: 100vh;
 }
 
