--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,12 +1,12 @@
 .footer {
-    background-color: #181818;
+    background-color: #000000;
     color: #ECF0F1;
     text-align: center;
     position: relative;
     bottom: 0;
     padding: 0;
     width: 100%;
-    margin-top: 240px;
+    padding: 80px 0px;
   }
   
   .footer-container {
