--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -1,38 +1,91 @@
-.homepage-main-page{
-
-    background-image: linear-gradient(rgb(214, 214, 214),rgb(19, 19, 19),rgb(214, 214, 214));
-    min-height: 100vh;
-}
-
-.homepage-main-container{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 16px;
-    padding: 0 100px;
-}
-
-.homepage-left{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-left: 120px;
-}
-
-.homepage-right{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin-left: 48px;
-    flex-grow: calc(1);
-}
-
-.digital-clock{
-    margin-top: 32px;
+.homepage {
     font-family: 'Courier New', Courier, monospace;
-    font-size: 60px;
-    font-weight: 100;
+    background-color: white;
+    color: black;
 }
+
+.hero-section {
+    background-color: black;
+    color: white;
+    padding: 100px 50px;
+    text-align: center;
+}
+
+.hero-section h1 {
+    font-size: 48px;
+    margin-bottom: 20px;
+}
+
+.hero-section p {
+    font-size: 20px;
+    margin-bottom: 40px;
+}
+
+
+.features-section {
+    text-align: center;
+    padding: 60px 50px;
+    background-color: #f5f5f5;
+}
+
+.features-section h2 {
+    font-size: 36px;
+    margin-bottom: 40px;
+}
+
+.features {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.feature-card {
+    background-color: whitesmoke;
+    padding: 30px;
+    border-radius: 10px;
+    border: 2px solid transparent;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    width: 250px;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+}
+
+.feature-card:hover{
+    transform: scale(1.05);
+
+    background-color: #000000;
+    border: 2px solid whitesmoke;
+    color: whitesmoke;
+
+    p{
+        color: whitesmoke;
+    }
+}
+
+.feature-card h3 {
+    font-size: 24px;
+    margin-bottom: 15px;
+}
+
+.feature-card p {
+    font-size: 16px;
+    color: #555;
+}
+
+.signup-section {
+    background-color: #f5f5f5;
+    text-align: center;
+    padding: 100px 20px;
+    align-items: center;
+}
+
+.signup-section h2 {
+    font-size: 36px;
+    margin-bottom: 20px;
+}
+
+.signup-section p {
+    font-size: 20px;
+    margin-bottom: 40px;
+}
+  
