--- a/src/components/text_field/text_field.css
+++ b/src/components/text_field/text_field.css
@@ -6,13 +6,14 @@
 
     width: 1440px;
     height: 480px;
+    overflow: auto;
+
     font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
     background-color: #fafafa;
     box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.2);
 
-    position: relative; /* Needed for absolute positioning of children */
-    overflow: visible; /* Allow content to overflow */
+    position: relative;
 }
 .editor-container:focus {
     outline: none;
