--- a/src/pages/written_diaries/written_diaries.css
+++ b/src/pages/written_diaries/written_diaries.css
@@ -16,24 +16,25 @@
     /* background-image: url('../../assets/tablet.svg'); */
     /* background-repeat: no-repeat;
     background-size: cover; */
-    background-color: black;
-    border-radius: 2rem;
+    background-color: rgb(230, 230, 230);
+    border-radius: 0.5rem;
     box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.5);
     width: 1440px;
     height: 480px;
+    overflow: auto;
 
     margin: 2rem 2rem 0 0;
 }
 
 .written-diaries-main-container .diary{
-    padding: 2rem;
+    padding: 0.5rem 2rem 0.5rem 2rem;
 }
 
 .diary p, 
 .diary h2{
     font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
-    color: aliceblue;
+    color: rgb(19, 19, 19);
 }
 
 .written-diaries-main-container .actions-container{
