--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,41 @@ button:hover{
   color: white;
   border-bottom: 1px solid black;
 }
+
+.ant-btn{
+    font-family: 'Courier New', Courier, monospace;
+
+    border: 0;
+    border-radius: 0;
+    border-bottom: 1px solid black;
+    background-color: rgb(245, 245, 245);
+    color: black;
+    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
+}
+
+.ant-btn:hover{
+    background-color: black !important;
+    color: white !important;
+    border-bottom: 1px solid black !important;
+}
+
+.ant-input, .ant-input-password{
+
+    border: 0;
+    border-bottom: 1px solid black;
+    border-radius: 0;
+
+    background-color: transparent;
+}
+
+.ant-input:hover, .ant-input-password:hover{
+    border: 0;
+    border-bottom: 1px solid black;
+
+    background-color: rgb(255, 255, 255);
+    
+}
+
+.ant-input:focus, .ant-input-password:focus{
+    border: 0;
+}
