--- a/src/components/text_field/toolbar.css
+++ b/src/components/text_field/toolbar.css
@@ -1,30 +1,14 @@
-button {
+.toolbar-main button {
     margin-right: 5px;
     padding: 5px 10px;
-    
-    border: 0;
-    border-radius: 0;
-    border-bottom: 1px solid black;
-    background-color: rgb(245, 245, 245);
-    color: black;
-    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
-
-    font-family: 'Courier New', Courier, monospace;
 }
 
-button:hover {
-    background-color: black;
-    color: white;
-    border-bottom: 1px solid black;
-    cursor: pointer;
-}
-
-button:active {
+.toolbar-main button:active {
     background-color: black;
     color: white;
 }
 
-button.active {
+.toolbar-main button.active {
     font-weight: bold;
     background-color: black;
     color: white;
